# Constellation

./: .gitignore  AUDIT_WATER_SYSTEM.md  README.md  build.py  constelation.code-workspace  pyproject.toml
.github/workflows/: build.yml
Apps/: Cargo.toml  build_dist_linux.sh  build_dist_windows.bat  build_dist_windows.ps1  build_dist_windows_cross.sh  package_dist_windows_ndi.sh
Apps/ClientNDI/: Cargo.toml  README.md  build.rs  package_portable_linux.sh
Apps/ClientNDI/src/: main.rs
Apps/Server/: Cargo.toml  README.md  pyproject.toml
Apps/Server/src/: main.rs
Apps/Server/src/riverflow_server/: __init__.py  config.py  main.py
Apps/Server/src/riverflow_server/calibration/: __init__.py  grid.py
Apps/Server/src/riverflow_server/camera/: __init__.py  manager.py
Apps/Server/src/riverflow_server/detection/: __init__.py  floor.py  impact.py
Apps/Server/src/riverflow_server/osc/: __init__.py  sender.py
Apps/Server/src/riverflow_server/ui/: __init__.py  calibration_widget.py  camera_view.py  main_window.py
Apps/Server/src/server/: __main__.py
Apps/Server/tests/: conftest.py  test_camera_manager.py  test_floor_detector.py  test_grid_calibrator.py  test_impact_detector.py  test_osc_sender.py
Apps/ndi-sdk/: ndi_stub.c
DCC/: README.md  create_asset.bat  create_asset.sh
DCC/Blender/: Ground.blend
DCC/PSD/: Ground.png~  tadpole.psd
Unity_RiverFlow/Assets/: UniversalRenderPipelineGlobalSettings.asset
Unity_RiverFlow/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  (+1 more)
riverflow_build.egg-info/: PKG-INFO  SOURCES.txt
(+92 files in other folders)
