[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riverflow-build"
version = "0.1.0"
description = "Build automation for RiverFlow project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[tool.uv.workspace]
members = [
    "Apps/Server",
]
[tool.setuptools]
packages = []
py-modules = []
