[project]
name = "riverflow-server"
version = "0.1.0"
description = "Vision server: multi-camera floor detection, impact tracking, OSC bridge for Unity"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "opencv-python>=4.10",
    "python-osc>=1.9",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.scripts]
riverflow-server = "riverflow_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riverflow_server"]

[dependency-groups]
dev = [
    "pyinstaller>=6.9",
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
